[gd_scene load_steps=4 format=3 uid="uid://ng47i64t427o"]

[ext_resource type="Script" uid="uid://gxy8dbd6e0o3" path="res://scripts/Card.gd" id="1_yiag5"]
[ext_resource type="Texture2D" uid="uid://bc6bbdxgofaxy" path="res://images/hand.png" id="3_4dx8l"]
[ext_resource type="AudioStream" uid="uid://c86qp5mdys6sa" path="res://assets/sounds/match.mp3" id="3_qf083"]

[node name="Card" type="Button"]
custom_minimum_size = Vector2(120, 160)
offset_right = 159.0
offset_bottom = 61.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_yiag5")

[node name="FaceImage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 8.0
offset_right = 113.0
offset_bottom = 117.0
expand_mode = 3
stretch_mode = 5

[node name="BackImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_4dx8l")
expand_mode = 2
stretch_mode = 5

[node name="MatchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qf083")

[node name="VoiceSound" type="AudioStreamPlayer" parent="."]
